<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/layout_asmtitem_CL"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:scrollbars="vertical"
android:visibility="visible"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context=".LayoutAsmtItemActivity"
tools:showIn="@layout/layout_assessmentitem">

<TextView
    android:id="@+id/layout_asmntitem_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/layout_assessmentitem_title"
    android:textAlignment="viewStart"
    android:textColor="@color/colorPrimary"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="Assesment Title" />

    <TextView
        android:id="@+id/layout_asmntitem_type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="Assessment Type"
        android:text="@string/layout_assessmentitem_type"
        android:textAlignment="viewStart"
        android:textColor="@color/design_default_color_primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/layout_asmntitem_title"
        app:layout_constraintTop_toBottomOf="@+id/layout_asmntitem_title"
        tools:text="Assessment Type:" />

    <ImageButton
        android:id="@+id/layout_asmntitem_buttonedit"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/layout_assessment_edit_button_desc"
        android:onClick="goToEditAssessment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_asmntitem_buttondelete"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/layout_asmntitem_buttondelete"
        android:layout_width="57dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/layout_assessment_delete_button"
        android:onClick="deleteAsmtItem"
        app:layout_constraintBottom_toBottomOf="@+id/layout_asmntitem_buttonedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

<TextView
    android:id="@+id/layout_asmntitem_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:contentDescription="Assessment Date:"
    android:text="@string/layout_assessment_date"
    android:textAlignment="viewStart"
    android:textColor="@color/design_default_color_primary"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@+id/layout_asmntitem_type"
    app:layout_constraintTop_toBottomOf="@+id/layout_asmntitem_type"
    tools:text="Assessment Date:" />

<TextView
    android:id="@+id/layout_assesmentitem_typeTV"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/layout_assessmentitem_type_select"
    android:textColor="@android:color/holo_green_light"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintBaseline_toBaselineOf="@+id/layout_asmntitem_type"
    app:layout_constraintStart_toEndOf="@+id/layout_asmntitem_type"
    tools:text="OA" />

    <TextView
        android:id="@+id/layout_assessmentitem_dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/layout_asmntitem_date"
        app:layout_constraintStart_toStartOf="@+id/layout_assesmentitem_typeTV" />

    <TextView
        android:id="@+id/layout_asmtitem_staticcourseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="In Course:"
        android:textColor="@color/design_default_color_primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/layout_asmntitem_date"
        app:layout_constraintTop_toBottomOf="@+id/layout_asmntitem_date" />

    <TextView
        android:id="@+id/layout_asmtitem_courseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/layout_asmtitem_staticcourseTV"
        app:layout_constraintStart_toStartOf="@+id/layout_assessmentitem_dateTV" />

</android.support.constraint.ConstraintLayout>